--- a/SampleServices/SampleServices.vbproj
+++ b/SampleServices/SampleServices.vbproj
@@ -209,6 +209,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Mahasiswa.vb" />
+    <Compile Include="Models\Pengambilan.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
